<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFF"
    
    >
    <ScrollView android:id="@+id/scrollView1" android:orientation="vertical"  android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
            <LinearLayout android:id="@+id/linearLayout1" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
        <TextView android:text="@string/serverUrl" android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#000"></TextView>
    <EditText android:text="http://" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/urlTxt"></EditText>
    <TextView android:text="@string/intervalMinutes" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#000" android:inputType="number"></TextView>
    <EditText android:text="5" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/minuteTxt"></EditText>
    <TextView android:text="@string/verifyTitle" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#000"></TextView>
    <EditText android:text="Index" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/verifyTxt"></EditText>
    <TextView android:text="@string/checkList" android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#000"></TextView>
    <EditText android:text="" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/checkListTxt"></EditText>
    <TextView android:text="@string/userId" android:id="@+id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#000"></TextView>
    <EditText android:text="" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/userIdTxt"></EditText>
    <TextView android:text="@string/password" android:id="@+id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#000" android:password="true"></TextView>
    <EditText android:text="" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/passwordTxt"></EditText>
    <Button android:text="@string/save" android:id="@+id/saveBtn" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
        </LinearLayout>
    </ScrollView>
    
    
</LinearLayout>
