<?xml version="1.0" encoding="utf-8"?>
<!-- This file is at /res/layout/list_item.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal" android:layout_width="fill_parent"
	android:layout_height="wrap_content" android:background="#FFF">
    <TextView android:text="" android:id="@+id/statusTxt" android:layout_width="30dp" android:layout_height="fill_parent" android:background="#FF0"></TextView>
	
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
	<TextView android:id="@+id/row_url" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:textColor="#000"
		android:textSize="20dp" />
	<ProgressBar android:id="@+id/progressBar"  style="@android:style/Widget.ProgressBar.Horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content"></ProgressBar>
	<TextView android:text="@string/status" android:id="@+id/messageLbl"
		android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<ToggleButton android:text="@string/isMonitor"
			android:id="@+id/startBtn" android:layout_width="wrap_content"
			android:layout_height="fill_parent">
		</ToggleButton>
		<Button android:text="@string/hitory" android:id="@+id/historyBtn"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
		<Button android:text="@string/update" android:id="@+id/updatBtn"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
		<Button android:text="@string/delete" android:id="@+id/deleteBtn"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
	</LinearLayout>
	</LinearLayout>
</LinearLayout>