<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="#FFF">
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent">
		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content">
			<ToggleButton android:text="@string/stopAll"
				android:checked="true" android:id="@+id/stopAllBtn"
				android:layout_width="wrap_content" android:layout_height="wrap_content">
			</ToggleButton>
			<TextView android:layout_toRightOf="@+id/stopAllBtn"
				android:textColor="#000" android:gravity="center_vertical"
				android:text="@string/startAll" android:id="@+id/startAllTxt"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:layout_alignTop="@+id/stopAllBtn"
				android:layout_alignBottom="@+id/stopAllBtn"></TextView>
				<Button android:text="@string/clearLogs"
				android:id="@+id/clearLogsBtn"
				android:layout_width="wrap_content" android:layout_height="wrap_content">
			</Button>
		</LinearLayout>
		<ListView android:id="@+android:id/list"
			android:layout_height="fill_parent" android:layout_width="fill_parent"
			android:transcriptMode="normal" android:stackFromBottom="false"></ListView>
	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent"
		android:id="@+id/ad_layout" android:layout_height="wrap_content"
		android:gravity="bottom" android:layout_alignParentBottom="true"
		android:layout_alignBottom="@+id/home_layout">
	</LinearLayout>
</RelativeLayout>
